--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.9.0"
 matplotlib = "^3.9.2"
-pyqt6 = "^6.7.1"
-numpy = "^2.1.2"
+
+[tool.poetry.group.dev.dependencies]
+pyside6 = "^6.8.1"
+
